refactor: modified swagger and readme.
